mType/tests/testFiles/interface/pass/basicInterfaceDefinition.mt
// Basic interface definition test
interface Drawable {
    function draw(): void;
    function getArea(): float;
}

print("Basic interface definition successful");
